tests/error/struct_errors/not_a_class_def.err
Error: Expected a class definition (at $FILE:8:0)
  | 
6 | 
7 | @guppy.struct(module)
8 | def foo(x: int) -> int:
  | ^^^^^^^^^^^^^^^^^^^^^^^
9 |     return x
  | ^^^^^^^^^^^^ Expected a class definition

Guppy compilation failed due to 1 previous error
